[package]
name = "rpacket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.11.0"
clap = { version = "4.0", features = ["derive"] }
pnet = { version = "0.31.0", features = ["std"] }
tokio = { version = "1", features = ["full"] }
crossterm = "0.25.0"
crossbeam-channel = "0.5"